crates/aion-awl/tests/fixtures/rev2/declarations/valid/worker_single_action.awl
//! Send one message through the notifier worker and finish with the receipt.
workflow notify_once
  input message: String
  outcome sent: type Receipt, route success

type Receipt { id: String, accepted: Bool }

worker notifier
  action send_message(message: String) -> Receipt

step send
  message |> send_message |> route sent
